# UKF_slipping

./: README.md
labrob_gazebo_worlds/: package.xml
labrob_gazebo_worlds/worlds/: ground_plane_mod.world  labrob_empty.world
labrob_gazebo_worlds/worlds/ground_plane_mod/: model.sdf
labrob_tiago_gazebo/launch/: tiago_gazebo.launch
tiago_slipping_controller/: CMakeLists.txt  package.xml  setup.py
tiago_slipping_controller/launch/: tiago_complete.launch
tiago_slipping_controller/src/tiago_slipping_controller/: complete_controller.py  tiago.urdf
