<?xml version="1.0"?>
<package format="2">
  <name>labrob_gazebo_worlds</name>
  <version>0.0.0</version>
  <description>The labrob_gazebo_worlds package</description>
  <maintainer email="cipriano@diag.uniroma1.it">Michele Cipriano</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
  <gazebo_ros gazebo_model_path="${tiago_public_ws}/src/AMR23-FP1-UkfSlipping/labrob_gazebo_worlds/worlds/ground_plane_mod"/>
  </export>
</package>
